k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-webapp
  namespace: webapps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-webapp
  template:
    metadata:
      labels:
        app: python-webapp
    spec:
      containers:
      - name: python-webapp
        image: ashitta/flask-app:v5
        imagePullPolicy: Always   # 🔥 VERY IMPORTANT (ADD THIS)
        ports:
        - containerPort: 5000
