k8s/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: webapps
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 32000
  selector:
    app: mysql
