k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-webapp
  namespace: webapps
spec:
  type: NodePort
  selector:
    app: python-webapp
  ports:
    - port: 80
      targetPort: 5000
